# delivery_rust

./: Cargo.toml
migrations/2024-01-08-103148_create_users/: down.sql  up.sql
migrations/2024-01-08-103154_create_owners/: down.sql  up.sql
migrations/2024-01-08-104001_create_restaurant/: down.sql  up.sql
migrations/2024-01-08-104603_create_menus/: down.sql  up.sql
migrations/2024-01-08-105225_create_orders/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/routes/: customers.rs  mod.rs
