[package]
name = "delivery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "*", features = ["postgres"] }
dotenvy = "*"
axum = "*"
serde = { version = "*", features = ["derive"] }
jsonwebtoken = "*"
deadpool-diesel = { version = "0.5.0", features = ["postgres"] }
chrono = "0.4.31"
